--- a/pp-s4apps01/zecn/ui5-deploy.yaml
+++ b/pp-s4apps01/zecn/ui5-deploy.yaml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
 specVersion: '2.4'
 metadata:
-  name: zecn.zecn
+  name: pp.zecn
 type: application
 resources:
   configuration:
@@ -20,6 +20,6 @@ builder:
   - name: ui5-task-zipper
     afterTask: generateCachebusterInfo
     configuration:
-      archiveName: zecnzecn
+      archiveName: ppzecn
       additionalFiles:
       - xs-app.json
