--- a/pp-s4apps01/zecn/ui5-local.yaml
+++ b/pp-s4apps01/zecn/ui5-local.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: zecn.zecn
+  name: pp.zecn
 type: application
 framework:
   name: SAPUI5
@@ -24,7 +24,7 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: zecn.zecn
+        component: pp.zecn
         ui5Theme: sap_horizon
     - name: fiori-tools-proxy
       afterMiddleware: compression
