--- a/pp-s4apps01/zecn/ui5-mock.yaml
+++ b/pp-s4apps01/zecn/ui5-mock.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: zecn.zecn
+  name: pp.zecn
 type: application
 server:
   customMiddleware:
@@ -28,7 +28,7 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: zecn.zecn
+        component: pp.zecn
         ui5Theme: sap_horizon
     - name: sap-fe-mockserver
       beforeMiddleware: csp
