update zdndatebatchupdate 20241111 by skq

--- a/sd-s4apps01/zdndatebatchupdate/ui5-local.yaml
+++ b/sd-s4apps01/zdndatebatchupdate/ui5-local.yaml
@@ -41,6 +41,10 @@ server:
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
             authenticationType: BasicAuthentication
+          - path: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/
+            url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
