--- a/sd-s4apps01/zdndatebatchupdate/ui5-mock.yaml
+++ b/sd-s4apps01/zdndatebatchupdate/ui5-mock.yaml
@@ -41,6 +41,10 @@ server:
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
             authenticationType: BasicAuthentication
+          - path: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/
+            url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
@@ -66,8 +70,12 @@ server:
             metadataXmlPath: ./webapp/localService/zui_dtimp_conf_o4/metadata.xml
             mockdataRootPath: ./webapp/localService/zui_dtimp_conf_o4/mockdata
           - urlPath: /sap/opu/odata/sap/ZUI_DNDATEBATCHUPDATE_O2
-            metadataPath: ./webapp/localService/ZUI_DNDATEBATCHUPDATE_O2/metadata.xml
-            mockdataPath: ./webapp/localService/ZUI_DNDATEBATCHUPDATE_O2/mockdata
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/ZUI_DNDATEBATCHUPDATE_O2/metadata.xml
+            mockdataRootPath: ./webapp/localService/ZUI_DNDATEBATCHUPDATE_O2/mockdata
+          - urlPath: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/
+            metadataPath: ./webapp/localService/zui_prt_record_o4/metadata.xml
+            mockdataPath: ./webapp/localService/zui_prt_record_o4/mockdata
             generateMockData: true
         annotations:
           - localPath: ./webapp/localService/ZUI_DNDATEBATCHUPDATE_O2/ZUI_DNDATEBATCHUPDATE_O2_Annotation.xml
