--- a/sd-s4apps01/zdndatebatchupdate/ui5.yaml
+++ b/sd-s4apps01/zdndatebatchupdate/ui5.yaml
@@ -27,6 +27,10 @@ server:
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
             authenticationType: BasicAuthentication
+          - path: /sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/
+            url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
