--- a/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
@@ -42,6 +42,15 @@
                     "localUri": "localService/ZUI_DNDATEBATCHUPDATE_O2/metadata.xml",
                     "odataVersion": "2.0"
                 }
+            },
+            "PrintService": {
+                "uri": "/sap/opu/odata4/sap/zui_prt_record_o4/srvd/sap/zui_prt_record_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/zui_prt_record_o4/metadata.xml",
+                    "odataVersion": "4.0"
+                }
             }
         },
         "crossNavigation": {
@@ -114,6 +123,16 @@
                     "metadataUrlParams": {
                         "sap-value-list": "none"
                     }
+                }
+            },
+            "Print": {
+                "dataSource": "PrintService",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
                 }
             }
         },
