--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -256,7 +256,7 @@
       ],
       "args": [
         "--open",
-        "test/flpSandbox.html#ppzecn-tile"
+        "test/flpSandbox.html#zecnzecn-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
@@ -284,7 +284,7 @@
         "--config",
         "./ui5-local.yaml",
         "--open",
-        "test/flpSandbox.html#ppzecn-tile"
+        "test/flpSandbox.html#zecnzecn-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
@@ -311,7 +311,7 @@
         "--config",
         "./ui5-mock.yaml",
         "--open",
-        "test/flpSandbox.html#ppzecn-tile"
+        "test/flpSandbox.html#zecnzecn-tile"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
