--- a/mm-s4apps01/zprworkflow/webapp/manifest.json
+++ b/mm-s4apps01/zprworkflow/webapp/manifest.json
@@ -176,7 +176,7 @@
         },
         {
           "name": "PurchaseReq",
-          "pattern": "PurchaseReq/{contextPath}/{contextPrNo}/{contextApplyDepart}",
+          "pattern": "PurchaseReq/{contextPath}/{contextPrNo}/{contextApplyDepart}/{contextInstanceId}/{contextApplicationId}",
           "target": "PurchaseReq"
         }
       ],
