--- a/sd-s4apps01/shipmentstorageloc/ui5.yaml
+++ b/sd-s4apps01/shipmentstorageloc/ui5.yaml
@@ -18,6 +18,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
+            destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
