--- a/bi-s4apps01/recoverymanagement/ui5-mock.yaml
+++ b/bi-s4apps01/recoverymanagement/ui5-mock.yaml
@@ -1,6 +1,6 @@
 specVersion: "3.1"
 metadata:
-  name: recoverymanagement
+  name: bi.recoverymanagement
 type: application
 server:
   customMiddleware:
@@ -27,7 +27,7 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: recoverymanagement
+        component: bi.recoverymanagement
         ui5Theme: sap_horizon
     - name: sap-fe-mockserver
       beforeMiddleware: csp
