--- a/bi-s4apps01/recoverymanagement/ui5.yaml
+++ b/bi-s4apps01/recoverymanagement/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: recoverymanagement
+  name: bi.recoverymanagement
 type: application
 server:
   customMiddleware:
@@ -29,5 +29,5 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: recoverymanagement
+        component: bi.recoverymanagement
         ui5Theme: sap_horizon
