--- a/mm-s4apps01/poposting/ui5-local.yaml
+++ b/mm-s4apps01/poposting/ui5-local.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: poposting
+  name: mm.poposting
 type: application
 framework:
   name: SAPUI5
@@ -23,7 +23,7 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: poposting
+        component: mm.poposting
         ui5Theme: sap_horizon
     - name: fiori-tools-proxy
       afterMiddleware: compression
