--- a/mm-s4apps01/poposting/ui5-mock.yaml
+++ b/mm-s4apps01/poposting/ui5-mock.yaml
@@ -1,6 +1,6 @@
 specVersion: "3.1"
 metadata:
-  name: poposting
+  name: mm.poposting
 type: application
 server:
   customMiddleware:
@@ -34,7 +34,7 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: poposting
+        component: mm.poposting
         ui5Theme: sap_horizon
     - name: sap-fe-mockserver
       beforeMiddleware: csp
