--- a/mm-s4apps01/poposting/ui5.yaml
+++ b/mm-s4apps01/poposting/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: poposting
+  name: mm.poposting
 type: application
 server:
   customMiddleware:
@@ -36,5 +36,5 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: poposting
+        component: mm.poposting
         ui5Theme: sap_horizon
