--- a/mm-s4apps01/zprworkflow/ui5-mock.yaml
+++ b/mm-s4apps01/zprworkflow/ui5-mock.yaml
@@ -42,8 +42,14 @@ server:
             metadataPath: ./webapp/localService/metadata.xml
             mockdataPath: ./webapp/localService/mockdata
             generateMockData: true
+          - urlPath: /sap/opu/odata/sap/API_CV_ATTACHMENT_SRV/
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/S4/API_CV_ATTACHMENT_SRV/metadata.xml
+            mockdataRootPath: ./webapp/localService/S4/API_CV_ATTACHMENT_SRV/mockdata
         annotations:
           - localPath: ./webapp/annotations/annotation.xml
             urlPath: annotations/annotation.xml
           - localPath: ./webapp/localService/mainService_Annotation.xml
-            urlPath: /destinations/UMC_Dev_Customizing_BTP/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_PRWORKFLOW_O2_VAN',Version='0001')/$value/
+            urlPath: /destinations/UMC_Dev_Customizing/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_PRWORKFLOW_O2_VAN',Version='0001')/$value/
+          - localPath: ./webapp/localService/S4/API_CV_ATTACHMENT_SRV/API_CV_ATTACHMENT_SRV_Annotation.xml
+            urlPath: /destinations/UMC_Dev_Customizing_BTP/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='API_CV_ATTACHMENT_ANNO_MDL',Version='0001')/$value/
