20241119 pr workflow dialog

--- a/mm-s4apps01/zprworkflow/ui5-local.yaml
+++ b/mm-s4apps01/zprworkflow/ui5-local.yaml
@@ -36,7 +36,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing
+            destination: UMC_Dev_Customizing_BTP
             authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
