--- a/fico-s4apps01/zagencypurchasingn/ui5-local.yaml
+++ b/fico-s4apps01/zagencypurchasingn/ui5-local.yaml
@@ -37,6 +37,7 @@ server:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
