--- a/pp-s4apps01/productionplan/webapp/manifest.json
+++ b/pp-s4apps01/productionplan/webapp/manifest.json
@@ -66,7 +66,10 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+    "flexEnabled": false,
+    "config": {
+      "fullWidth": true
+    },
     "dependencies": {
       "minUI5Version": "1.120.18",
       "libs": {
