20241122 PP-024 生産計画立案プラットフォーム

--- a/pp-s4apps01/productionplan/webapp/manifest.json
+++ b/pp-s4apps01/productionplan/webapp/manifest.json
@@ -66,10 +66,7 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": false,
-    "config": {
-      "fullWidth": true
-    },
+    "flexEnabled": true,
     "dependencies": {
       "minUI5Version": "1.120.18",
       "libs": {
