BI003 Change BTP Destination

--- a/bi-s4apps01/recoverymanagement/ui5-local.yaml
+++ b/bi-s4apps01/recoverymanagement/ui5-local.yaml
@@ -32,8 +32,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
-            authenticationType: BasicAuthentication
+            destination: UMC_Dev_Customizing
+            authenticationType: SAMLAssertion
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
