--- a/mm-s4apps01/zprworkflow/webapp/manifest.json
+++ b/mm-s4apps01/zprworkflow/webapp/manifest.json
@@ -99,7 +99,7 @@
         }
     },
     "sap.ui5": {
-        "flexEnabled": true,
+        "flexEnabled": false,
         "dependencies": {
             "minUI5Version": "1.124.9",
             "libs": {
