--- a/fico-s4apps01/zaccountingdoc/webapp/manifest.json
+++ b/fico-s4apps01/zaccountingdoc/webapp/manifest.json
@@ -174,7 +174,7 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "AnalyticalTable"
+                    "type": "GridTable"
                   },
                   "actions": {
                     "Action1": {
