--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -80,6 +80,86 @@
         "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
         "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/bi-s4apps01/longterminventory\"}"
       }
+    },
+    {
+        "name": "Start longtermforcast",
+        "type": "node",
+        "request": "launch",
+        "cwd": "${workspaceFolder}/bi-s4apps01/longtermforcast",
+        "runtimeExecutable": "npx",
+        "windows": {
+            "runtimeExecutable": "npx.cmd"
+        },
+        "runtimeArgs": [
+            "fiori",
+            "run"
+        ],
+        "args": [
+            "--open",
+            "test/flpSandbox.html#bilongtermforcast-display"
+        ],
+        "console": "internalConsole",
+        "internalConsoleOptions": "openOnSessionStart",
+        "outputCapture": "std",
+        "env": {
+            "DEBUG": "--inspect",
+            "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+            "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/bi-s4apps01/longtermforcast\"}"
+        }
+    },
+    {
+        "name": "Start longtermforcast Local",
+        "type": "node",
+        "request": "launch",
+        "cwd": "${workspaceFolder}/bi-s4apps01/longtermforcast",
+        "runtimeExecutable": "npx",
+        "windows": {
+            "runtimeExecutable": "npx.cmd"
+        },
+        "runtimeArgs": [
+            "fiori",
+            "run"
+        ],
+        "args": [
+            "--config",
+            "./ui5-local.yaml",
+            "--open",
+            "test/flpSandbox.html#bilongtermforcast-display"
+        ],
+        "console": "internalConsole",
+        "internalConsoleOptions": "openOnSessionStart",
+        "outputCapture": "std",
+        "env": {
+            "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+            "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/bi-s4apps01/longtermforcast\"}"
+        }
+    },
+    {
+        "name": "Start longtermforcast Mock",
+        "type": "node",
+        "request": "launch",
+        "cwd": "${workspaceFolder}/bi-s4apps01/longtermforcast",
+        "runtimeExecutable": "npx",
+        "windows": {
+            "runtimeExecutable": "npx.cmd"
+        },
+        "runtimeArgs": [
+            "fiori",
+            "run"
+        ],
+        "args": [
+            "--config",
+            "./ui5-mock.yaml",
+            "--open",
+            "test/flpSandbox.html#bilongtermforcast-display"
+        ],
+        "console": "internalConsole",
+        "internalConsoleOptions": "openOnSessionStart",
+        "outputCapture": "std",
+        "env": {
+            "FIORI_TOOLS_URL_PARAMS": "sap-ui-xx-viewCache=false",
+            "run.config": "{\"handlerId\":\"fiori_tools\",\"runnableId\":\"/home/user/projects/UMC_UI5/bi-s4apps01/longtermforcast\"}"
+        }
     }
   ]
 }
